test(heroi): corrige se existe carta jogável
Correção do código que verifica se há cartas jogáveis na mão do jogador.